--- a/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
@@ -8050,14 +8050,14 @@ msgstr ""
 "les dortoirs et chambres avec une disponibilité complete pour votre séjour."
 
 #: ../code/application/views/helpfile/pofields.php:768
-#, fuzzy, php-format
+#, php-format
 msgid "Email is not valid"
-msgstr "Pays non valide"
+msgstr "E-mail non valide"
 
 #: ../code/application/views/helpfile/pofields.php:772
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the from name"
-msgstr "Remplissez le nom dans le champ \"De\""
+msgstr "Remplissez l'info destinataire"
 
 #: ../code/application/views/helpfile/pofields.php:773
 #, php-format
@@ -8075,86 +8075,86 @@ msgid "Remove from any searches for 1 week"
 msgstr "Retirer de toutes les recherches pour 1 semaine"
 
 #: ../code/application/views/helpfile/pofields.php:776
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Single Private Ensuite"
-msgstr "Chambre privée standard pour 1 personne avec salle de bains partagée"
+msgstr "Chambre standard avec 1 lit simple et salle de bains privée"
 
 #: ../code/application/views/helpfile/pofields.php:777
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Twin Private Ensuite"
-msgstr "Chambre privée standard pour 1 personne avec salle de bains partagée"
+msgstr "Chambre standard avec 2 lits simples et salle de bains privée"
 
 #: ../code/application/views/helpfile/pofields.php:778
 #, php-format
 msgid "Deluxe Double Bed Private Ensuite"
-msgstr ""
+msgstr "Chambre Deluxe avec 1 lit double et salle de bains privée"
 
 #: ../code/application/views/helpfile/pofields.php:779
 #, php-format
 msgid "1 Bed Private Ensuite"
-msgstr ""
+msgstr "Chambre privée avec 1 lit simple et salle de bains privée"
 
 #: ../code/application/views/helpfile/pofields.php:780
-#, fuzzy, php-format
+#, php-format
 msgid "%d Bed Private Ensuite"
-msgstr "Chambre privée pour %d personnes avec salle de bains partagée"
+msgstr "Chambre privée pour %d personnes et salle de bains privée"
 
 #: ../code/application/views/helpfile/pofields.php:781
 #, php-format
 msgid "Deluxe 1 Bed Family Room Ensuite"
 msgstr ""
+"Chambre Familiale privée de luxe avec 1 lit simple et salle de bains privée"
 
 #: ../code/application/views/helpfile/pofields.php:782
 #, php-format
 msgid "Deluxe %d Bed Family Room Ensuite"
 msgstr ""
+"Chambre Familale privée de luxe pour %d personnes et salle de bains privée"
 
 #: ../code/application/views/helpfile/pofields.php:783
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by districts"
-msgstr "Filtrer par : "
+msgstr "Filtrer par quartiers"
 
 #: ../code/application/views/helpfile/pofields.php:784
 #, php-format
 msgid "Filter by landmarks (-2kms)"
-msgstr ""
+msgstr "Filtrer par attractions (-2kms)"
 
 #: ../code/application/views/helpfile/pofields.php:785
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a dorm"
-msgstr "Prix moyen par nuit et par personne"
+msgstr "Prix ​​le plus bas par nuit et par personne dans un dortoir"
 
 #: ../code/application/views/helpfile/pofields.php:786
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a private room"
-msgstr ""
-"Le prix le plus bas par personne et par nuit dans une chambre privée dans "
-"cet établissement :"
+msgstr "Prix ​​le plus bas par nuit et par personne dans une chambre privée"
 
 #: ../code/application/views/helpfile/pofields.php:787
 #, php-format
 msgid "Deposit:"
-msgstr ""
+msgstr "Dépôt :"
 
 #: ../code/application/views/helpfile/pofields.php:788
 #, php-format
 msgid "Deposit to be paid now:"
-msgstr ""
+msgstr "Dépôt à payer maintenant:"
 
 #: ../code/application/views/helpfile/pofields.php:789
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit already paid:"
-msgstr "Paiement déjà effectué"
+msgstr "Dépôt à payer maintenant:"
 
 #: ../code/application/views/helpfile/pofields.php:790
 #, php-format
 msgid "Amount already charged in %s:"
-msgstr ""
+msgstr "Montant déjà chargée en %s :"
 
 #: ../code/application/views/helpfile/pofields.php:791
 #, php-format
 msgid "Currency for the deposit:"
-msgstr ""
+msgstr "Devise pour le dépôt:"
 
 #: ../code/application/views/helpfile/pofields.php:792
 #, php-format
@@ -8162,43 +8162,44 @@ msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival."
 msgstr ""
+"Vous ne payez que le dépôt pour confirmer et garantir votre réservation dès "
+"maintenant. Le solde est payable à l'arrivée."
 
 #: ../code/application/views/helpfile/pofields.php:793
 #, php-format
 msgid "Amount to be paid on arrival:"
-msgstr ""
+msgstr "Montant à payer à l'arrivée:"
 
 #: ../code/application/views/helpfile/pofields.php:794
 #, php-format
 msgid "Amount to be paid when you arrive at the property"
-msgstr ""
+msgstr "Montant à payer a votre arrivée"
 
 #: ../code/application/views/helpfile/pofields.php:796
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card (not required):"
-msgstr "Carte de membre requise"
+msgstr "Carte de membre (non obligatoire):"
 
 #: ../code/application/views/helpfile/pofields.php:797
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card:"
-msgstr "Carte de membre requise"
+msgstr "Carte de membre :"
 
 #: ../code/application/views/helpfile/pofields.php:798
 #, php-format
 msgid "The deposit is non refundable and non transferable."
-msgstr ""
+msgstr "Le dépôt est non remboursable et non transférable."
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property"
 msgstr ""
-"Vous ne payez que le dépôt (10%% du montant total) pour confirmer et "
-"garantir votre réservation. Le montant restant (90%%) est payable à votre "
-"arrivée. Vous trouverez les coordonnées de l’établissement (email, adresse, "
-"numéro de téléphone ...) dans votre courriel de confirmation après avoir "
-"effectué votre réservation."
+"Vous ne payez que le dépôt pour confirmer et garantir votre réservation "
+"maintenant. Le solde est payable à l'arrivée. Vous trouverez les coordonnées "
+"de l'établissement  (email, adresse, numéro de téléphone …) dans votre email "
+"de confirmation après avoir effectué votre réservation."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
