--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-19 16:10+0300\n"
-"PO-Revision-Date: 2013-04-19 21:22+0200\n"
+"PO-Revision-Date: 2013-04-21 18:46+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -8031,14 +8031,14 @@ msgstr ""
 "solo las habitaciones con disponibilidad completa para tu estancia."
 
 #: ../code/application/views/helpfile/pofields.php:768
-#, fuzzy, php-format
+#, php-format
 msgid "Email is not valid"
-msgstr "País no válido"
+msgstr "Correo electrónino no es válido"
 
 #: ../code/application/views/helpfile/pofields.php:772
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the from name"
-msgstr "Completa el nombre \"De\""
+msgstr "Fill in the from name"
 
 #: ../code/application/views/helpfile/pofields.php:773
 #, php-format
@@ -8056,86 +8056,84 @@ msgid "Remove from any searches for 1 week"
 msgstr "Elimine de cualquier búsqueda durante 1 semana"
 
 #: ../code/application/views/helpfile/pofields.php:776
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Single Private Ensuite"
-msgstr "Habitación Individual Estándar con Baño Compartido"
+msgstr "Habitación estándar con 1 cama sencilla y baño privado"
 
 #: ../code/application/views/helpfile/pofields.php:777
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Twin Private Ensuite"
-msgstr "Habitación Individual Estándar con Baño Compartido"
+msgstr "Habitación estándar con 2 camas sencillas y baño privado"
 
 #: ../code/application/views/helpfile/pofields.php:778
 #, php-format
 msgid "Deluxe Double Bed Private Ensuite"
-msgstr ""
+msgstr "Habitación Deluxe con 1 cama doble y baño privado"
 
 #: ../code/application/views/helpfile/pofields.php:779
 #, php-format
 msgid "1 Bed Private Ensuite"
-msgstr ""
+msgstr "Habitación privada con 1 cama sencilla y baño privado"
 
 #: ../code/application/views/helpfile/pofields.php:780
-#, fuzzy, php-format
+#, php-format
 msgid "%d Bed Private Ensuite"
-msgstr "Habitación Privada para %d personas con Baño Compartido"
+msgstr "Habitación privada para %d personas con baño privado"
 
 #: ../code/application/views/helpfile/pofields.php:781
 #, php-format
 msgid "Deluxe 1 Bed Family Room Ensuite"
-msgstr ""
+msgstr "Habitación deluxe familiar privada con 1 cama sencilla y baño privado"
 
 #: ../code/application/views/helpfile/pofields.php:782
 #, php-format
 msgid "Deluxe %d Bed Family Room Ensuite"
-msgstr ""
+msgstr "Habitación Deluxe Familiar privada para %d personas y baño privado"
 
 #: ../code/application/views/helpfile/pofields.php:783
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by districts"
-msgstr "Filtrar por:"
+msgstr "Filtro por distritos"
 
 #: ../code/application/views/helpfile/pofields.php:784
 #, php-format
 msgid "Filter by landmarks (-2kms)"
-msgstr ""
+msgstr "Filtro por puntos de referencia (-2kms)"
 
 #: ../code/application/views/helpfile/pofields.php:785
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a dorm"
-msgstr "Precio medio por persona y noche"
+msgstr "Precio más bajo por persona y noche en habitación compartida"
 
 #: ../code/application/views/helpfile/pofields.php:786
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a private room"
-msgstr ""
-"El precio más bajo por persona y noche en una habitación privada de este "
-"alojamiento:"
+msgstr "Precio más bajo por persona y noche en habitación privada"
 
 #: ../code/application/views/helpfile/pofields.php:787
 #, php-format
 msgid "Deposit:"
-msgstr ""
+msgstr "Depósito:"
 
 #: ../code/application/views/helpfile/pofields.php:788
 #, php-format
 msgid "Deposit to be paid now:"
-msgstr ""
+msgstr "Depósito que debe pagar ahora:"
 
 #: ../code/application/views/helpfile/pofields.php:789
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit already paid:"
-msgstr "Pago ya efectuado"
+msgstr "Depósito ya pagado:"
 
 #: ../code/application/views/helpfile/pofields.php:790
 #, php-format
 msgid "Amount already charged in %s:"
-msgstr ""
+msgstr "Importe ya cobrado en %s:"
 
 #: ../code/application/views/helpfile/pofields.php:791
 #, php-format
 msgid "Currency for the deposit:"
-msgstr ""
+msgstr "Moneda para el depósito:"
 
 #: ../code/application/views/helpfile/pofields.php:792
 #, php-format
@@ -8143,43 +8141,44 @@ msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival."
 msgstr ""
+"Solamente paga el depósito para confirmar y asegurar ahora  su reservación.  "
+"La cantidad restante debe pagarse al llegar.  "
 
 #: ../code/application/views/helpfile/pofields.php:793
 #, php-format
 msgid "Amount to be paid on arrival:"
-msgstr ""
+msgstr "Importe a pagar al llegar:"
 
 #: ../code/application/views/helpfile/pofields.php:794
 #, php-format
 msgid "Amount to be paid when you arrive at the property"
-msgstr ""
+msgstr "Importe a pagar cuando llegue a la propiedad"
 
 #: ../code/application/views/helpfile/pofields.php:796
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card (not required):"
-msgstr "Se requiere tarjeta de membresía "
+msgstr "Tarjeta de membresía (no indispensable):"
 
 #: ../code/application/views/helpfile/pofields.php:797
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card:"
-msgstr "Se requiere tarjeta de membresía "
+msgstr "Tarjeta de membresía:"
 
 #: ../code/application/views/helpfile/pofields.php:798
 #, php-format
 msgid "The deposit is non refundable and non transferable."
-msgstr ""
+msgstr "El depóstio no es reembolsable ni transferible"
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property"
 msgstr ""
-"Pagará sólo el depósito (10%% del total) para confirmar y garantizar su "
-"reserva. La cantidad restante (90%%) se abona a su llegada. Una vez hecha su "
-"reserva, recibirá un correo electrónico de la propiedad incluyendo "
-"confirmación de reserva y datos de la propiedad (correo electrónico, "
-"dirección, número de teléfono ...)."
+"Solamente paga el depósito para confirmar y asegurar ahora  su reservación.  "
+"La cantidad restante debe pagarse al llegar.  Encontrará la información de "
+"contacto de la propiedad (correo electrónico, dirección, número de "
+"teléfono…) en el correo que recibirá  una vez hecha la reservación."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
