Translation updates (es, hu)

--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-19 16:10+0300\n"
-"PO-Revision-Date: 2013-04-21 18:46+0200\n"
+"PO-Revision-Date: 2013-04-21 20:49+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -8038,7 +8038,7 @@ msgstr "Correo electrónino no es válido"
 #: ../code/application/views/helpfile/pofields.php:772
 #, php-format
 msgid "Fill in the from name"
-msgstr "Fill in the from name"
+msgstr "Escriba su nombre en \"De\""
 
 #: ../code/application/views/helpfile/pofields.php:773
 #, php-format
