Translation updates (pl)

--- a/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang_he.po
+++ b/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang_he.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-19 16:10+0300\n"
-"PO-Revision-Date: 2013-04-19 21:27+0200\n"
+"PO-Revision-Date: 2013-04-21 21:30+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -8038,14 +8038,14 @@ msgstr ""
 "Verfügbarkeit für ihren Aufenthalt angezeigt zu bekommen."
 
 #: ../code/application/views/helpfile/pofields.php:768
-#, fuzzy, php-format
+#, php-format
 msgid "Email is not valid"
-msgstr "Land ungueltig"
+msgstr "Die Email ist nicht gültig"
 
 #: ../code/application/views/helpfile/pofields.php:772
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the from name"
-msgstr "Bitte unter Name \"Von\" eintragen"
+msgstr "Von: Name ausfüllen"
 
 #: ../code/application/views/helpfile/pofields.php:773
 #, php-format
@@ -8063,86 +8063,84 @@ msgid "Remove from any searches for 1 week"
 msgstr "Von jeder Suchliste für 1 Woche löschen"
 
 #: ../code/application/views/helpfile/pofields.php:776
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Single Private Ensuite"
-msgstr "Standard privates Schlafzimmer für 1 Person mit geteilten Badezimmer"
+msgstr "Standardzimmer mit Einzelbett und eigenem Bad"
 
 #: ../code/application/views/helpfile/pofields.php:777
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Twin Private Ensuite"
-msgstr "Standard privates Schlafzimmer für 1 Person mit geteilten Badezimmer"
+msgstr "Standardzimmer mit zwei Einzelbetten und eigenem Bad"
 
 #: ../code/application/views/helpfile/pofields.php:778
 #, php-format
 msgid "Deluxe Double Bed Private Ensuite"
-msgstr ""
+msgstr "Deluxezimmer mit Doppelbett und eigenem Bad"
 
 #: ../code/application/views/helpfile/pofields.php:779
 #, php-format
 msgid "1 Bed Private Ensuite"
-msgstr ""
+msgstr "Privates Zimmer mit Einzelbett und eigenem Bad "
 
 #: ../code/application/views/helpfile/pofields.php:780
-#, fuzzy, php-format
+#, php-format
 msgid "%d Bed Private Ensuite"
-msgstr "%d private Schlafzimmer für 7 Personen mit einem geteilten Badezimmer"
+msgstr "Privates Zimmer für %d Personen und eigenem Bad"
 
 #: ../code/application/views/helpfile/pofields.php:781
 #, php-format
 msgid "Deluxe 1 Bed Family Room Ensuite"
-msgstr ""
+msgstr "Deluxe Familienzimmer mit Einzelbett und eigenem Bad"
 
 #: ../code/application/views/helpfile/pofields.php:782
 #, php-format
 msgid "Deluxe %d Bed Family Room Ensuite"
-msgstr ""
+msgstr "Deluxe Familienzimmer für %d Personen und eigenem Bad"
 
 #: ../code/application/views/helpfile/pofields.php:783
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by districts"
-msgstr "Sortieren nach:"
+msgstr "Filter nach Bezirken"
 
 #: ../code/application/views/helpfile/pofields.php:784
 #, php-format
 msgid "Filter by landmarks (-2kms)"
-msgstr ""
+msgstr "Filter nach Wahrzeichen (-2 Km)"
 
 #: ../code/application/views/helpfile/pofields.php:785
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a dorm"
-msgstr "Durchschnitt po Nacht pro Person"
+msgstr "Niedrigster Preis pro Nacht pro Person in einem Mehrbettzimmer"
 
 #: ../code/application/views/helpfile/pofields.php:786
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a private room"
-msgstr ""
-"Der niedrigste Preis pro Person/Nacht in einem Schlafzimmer in dieser "
-"Unterkunft:"
+msgstr "Niedrigster Preis pro Nacht pro Person in einem Privatzimmer"
 
 #: ../code/application/views/helpfile/pofields.php:787
 #, php-format
 msgid "Deposit:"
-msgstr ""
+msgstr "Kaution:"
 
 #: ../code/application/views/helpfile/pofields.php:788
 #, php-format
 msgid "Deposit to be paid now:"
-msgstr ""
+msgstr "Kaution jetzt fällig:"
 
 #: ../code/application/views/helpfile/pofields.php:789
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit already paid:"
-msgstr "Zahlung durchgeführt"
+msgstr "Kaution bereitz bezahlt:"
 
 #: ../code/application/views/helpfile/pofields.php:790
 #, php-format
 msgid "Amount already charged in %s:"
-msgstr ""
+msgstr "Betrag bereits bezahlt in %s:"
 
 #: ../code/application/views/helpfile/pofields.php:791
 #, php-format
 msgid "Currency for the deposit:"
-msgstr ""
+msgstr "Währung der Kaution:"
 
 #: ../code/application/views/helpfile/pofields.php:792
 #, php-format
@@ -8150,43 +8148,44 @@ msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival."
 msgstr ""
+"Sie bezahlen jetzt nur die Kaution zur Bestätigung und zur Sicherung ihrer "
+"Buchung. Der restliche Betrag ist fällig bei Ankunft. "
 
 #: ../code/application/views/helpfile/pofields.php:793
 #, php-format
 msgid "Amount to be paid on arrival:"
-msgstr ""
+msgstr "Betrag fällig bei Ankunft"
 
 #: ../code/application/views/helpfile/pofields.php:794
 #, php-format
 msgid "Amount to be paid when you arrive at the property"
-msgstr ""
+msgstr "Betrag fällig bei Ankunft an der Liegenschaft"
 
 #: ../code/application/views/helpfile/pofields.php:796
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card (not required):"
-msgstr "Mitgliedskarte benötigt"
+msgstr "Mitgliedskarte (nicht notwendig):"
 
 #: ../code/application/views/helpfile/pofields.php:797
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card:"
-msgstr "Mitgliedskarte benötigt"
+msgstr "Mitgliedskarten-Nr.:"
 
 #: ../code/application/views/helpfile/pofields.php:798
 #, php-format
 msgid "The deposit is non refundable and non transferable."
-msgstr ""
+msgstr "Die Kaution ist nicht rückerstattbar und nicht übertragbar."
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property"
 msgstr ""
-"Nur 10%% des Gesamtbetrags müssen jetzt als Anzahlung gezahlt werden, um "
-"Ihre Reservierung zu bestätigen und zu sichern. Der Restbetrag (90%%) ist "
-"bei Ihrer Anreise fällig. Die Kontaktinformationen Ihrer Unterkunft (E-Mail, "
-"Adresse, Telefonnummer,...) finden Sie in Ihrer Bestätigungs-E-Mail, nachdem "
-"Sie eine Reservierung durchgeführt haben. "
+"Sie bezahlen jetzt nur die Kaution zur Bestätigung und zur Sicherung ihrer "
+"Buchung. Der restliche Betrag ist fällig bei Ankunft. Sie können die "
+"Kontaktangaben der Liegenschaft (Email, Adresse, Telefonnummer usw.) in "
+"ihrer Bestätigungs-Email finden, nachdem Sie die Buchung vollzogen haben."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
