--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-19 16:10+0300\n"
-"PO-Revision-Date: 2013-04-19 22:06+0200\n"
+"PO-Revision-Date: 2013-04-21 22:23+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -7816,14 +7816,14 @@ msgstr ""
 "수 있습니다."
 
 #: ../code/application/views/helpfile/pofields.php:768
-#, fuzzy, php-format
+#, php-format
 msgid "Email is not valid"
-msgstr "잘못된 국가"
+msgstr "이메일이 유효하지 않습니다."
 
 #: ../code/application/views/helpfile/pofields.php:772
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the from name"
-msgstr "\"발신자\"란에 이름을 쓰세요"
+msgstr "이름란을 써주세요"
 
 #: ../code/application/views/helpfile/pofields.php:773
 #, php-format
@@ -7841,84 +7841,84 @@ msgid "Remove from any searches for 1 week"
 msgstr "1 주 동안 모든 검색결과를 지우기"
 
 #: ../code/application/views/helpfile/pofields.php:776
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Single Private Ensuite"
-msgstr "공용 화장실을 쓰는 스탠다드 싱글 전용룸"
+msgstr "스탠다드 1 싱글 베드 개인 전용룸"
 
 #: ../code/application/views/helpfile/pofields.php:777
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Twin Private Ensuite"
-msgstr "공용 화장실을 쓰는 스탠다드 싱글 전용룸"
+msgstr "스탠다드 2 싱글 베드 개인 전용룸"
 
 #: ../code/application/views/helpfile/pofields.php:778
 #, php-format
 msgid "Deluxe Double Bed Private Ensuite"
-msgstr ""
+msgstr "디럭스 1 더블 베드  개인 전용룸"
 
 #: ../code/application/views/helpfile/pofields.php:779
 #, php-format
 msgid "1 Bed Private Ensuite"
-msgstr ""
+msgstr "1 싱글베드 개인전용 방"
 
 #: ../code/application/views/helpfile/pofields.php:780
-#, fuzzy, php-format
+#, php-format
 msgid "%d Bed Private Ensuite"
-msgstr "공용 화장실을 쓰는 %d인 전용룸"
+msgstr "%d 싱글베드 개인전용 방"
 
 #: ../code/application/views/helpfile/pofields.php:781
 #, php-format
 msgid "Deluxe 1 Bed Family Room Ensuite"
-msgstr ""
+msgstr "디럭스 1 베드 가족실"
 
 #: ../code/application/views/helpfile/pofields.php:782
 #, php-format
 msgid "Deluxe %d Bed Family Room Ensuite"
-msgstr ""
+msgstr "디럭스 %d 베드 가족실"
 
 #: ../code/application/views/helpfile/pofields.php:783
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by districts"
-msgstr "검색어:"
+msgstr "지역으로 필터 하기"
 
 #: ../code/application/views/helpfile/pofields.php:784
 #, php-format
 msgid "Filter by landmarks (-2kms)"
-msgstr ""
+msgstr "랜드 마크 (- 2kms)로 필터 하기"
 
 #: ../code/application/views/helpfile/pofields.php:785
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a dorm"
-msgstr "개인당 1 박 평균"
+msgstr "기숙사 이용 시 1 박 1 인 기준 최저 가격"
 
 #: ../code/application/views/helpfile/pofields.php:786
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a private room"
-msgstr "이 호텔의 개인 전용 룸에 1박당 1명의 최저 가격:"
+msgstr "개인 전용 룸 1 박 기준 1인당 최저 가격"
 
 #: ../code/application/views/helpfile/pofields.php:787
 #, php-format
 msgid "Deposit:"
-msgstr ""
+msgstr "보증금 :"
 
 #: ../code/application/views/helpfile/pofields.php:788
 #, php-format
 msgid "Deposit to be paid now:"
-msgstr ""
+msgstr "지금 지불해야 하는 보증금 :"
 
 #: ../code/application/views/helpfile/pofields.php:789
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit already paid:"
-msgstr "이미 결제가 완료되었습니다."
+msgstr "이미 지불한 보증금 :"
 
 #: ../code/application/views/helpfile/pofields.php:790
 #, php-format
 msgid "Amount already charged in %s:"
-msgstr ""
+msgstr "% s로 청구된 금액 :"
 
 #: ../code/application/views/helpfile/pofields.php:791
 #, php-format
 msgid "Currency for the deposit:"
-msgstr ""
+msgstr "예금 통화 :"
 
 #: ../code/application/views/helpfile/pofields.php:792
 #, php-format
@@ -7926,42 +7926,43 @@ msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival."
 msgstr ""
+"지금 당신은  예약을 확인하고 확보하기 위한 보증금을 지불해야합니다. 나머지 금"
+"액은 도착 시 지불하십시오."
 
 #: ../code/application/views/helpfile/pofields.php:793
 #, php-format
 msgid "Amount to be paid on arrival:"
-msgstr ""
+msgstr "도착 시 지불할 금액 :"
 
 #: ../code/application/views/helpfile/pofields.php:794
 #, php-format
 msgid "Amount to be paid when you arrive at the property"
-msgstr ""
+msgstr "호텔에 도착했을 때 지불하는 금액"
 
 #: ../code/application/views/helpfile/pofields.php:796
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card (not required):"
-msgstr "멤버쉽 카드 필요"
+msgstr "회원 카드 (필요 없음) :"
 
 #: ../code/application/views/helpfile/pofields.php:797
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card:"
-msgstr "멤버쉽 카드 필요"
+msgstr "회원 카드 :"
 
 #: ../code/application/views/helpfile/pofields.php:798
 #, php-format
 msgid "The deposit is non refundable and non transferable."
-msgstr ""
+msgstr "보증금은 환불 및 양도될 수 없습니다."
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property"
 msgstr ""
-" 고객님의 예약승인을 위해 디파짓(총 금액의 10%%)을 결제 해주셔야 합니다. 남"
-"은 금액(90%%)는 도착후에 결제 가능하십니다. 고객님의 예약승인이 완료된후 보내"
-"드리는 확인 메일에서 숙소 정보(이메일, 주소, 전화번호 등..)을 확인 하실 수 있"
-"습니다. "
+"당신은 지금 예약을 확인하고 확보하기 위한 보증금을 지불해야합니다. 나머지 금"
+"액은 도착 시 지불하십시오. 당신은 예약한 후에, 확인 메일에서 호텔의 연락처 정"
+"보 (이메일, 주소, 전화 번호, …)를 찾을 수 있습니다."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
