MCWEB-565 Updated PO temporary

--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-19 16:10+0300\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Iana <hrapulya@gmail.com>\n"
+"Last-Translator: Jerome Curlier <jeromecurlier@mcwebamangement.com>\n"
 "Language-Team: \n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -4160,11 +4160,10 @@ msgid ""
 "assurer que vos informations sur la méthode de paiement sont exactes. Si le "
 "problème persiste, veuillez communiquer avec nous à l'adresse suivante : %s"
 msgstr ""
-"Il y a eu une erreur lors du traitement de votre demande, veuillez vous "
-"assurer que vos informations sur la méthode de paiement sont exactes ou "
-"utiliser une carte de crédit différente (meme si elle n'est pas celle que "
-"vous allez emmener en voyage). Si le problème persiste, veuillez communiquer "
-"avec nous au +33-(0)975171132 ou à l'adresse suivante : %s"
+"22 Avril 2013: Nous  avons ce soir des problèmes techniques avec certain "
+"paiements de cartes et certaines réservations sont déjà confirmées. Avant de "
+"refaire une réservation, veuillez nous contacter au +33-(0)975171132 ou nous "
+"contacter ici:  %s"
 
 #: ../code/application/views/hw/booking_view.php:90
 #: ../code/application/views/hw/booking_view.php:1015
