april 23 bug credit card text

--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -3748,7 +3748,7 @@ msgstr "Réserver maintenant pour garantir votre chambre"
 #: ../code/application/views/hb/booking_view.php:775
 #, php-format
 msgid "Il y a eu une erreur lors du traitement de votre demande, veuillez vous assurer que vos informations sur la méthode de paiement sont exactes. Si le problème persiste, veuillez communiquer avec nous à l'adresse suivante : %s"
-msgstr "23 Avril 2013: Nous  avons ce soir des problèmes techniques avec certain paiements de cartes de crédit et certaines réservations sont déjà confirmées. Avant de refaire une réservation, veuillez nous contacter au +33-(0)975171132 ou nous contacter ici:  %s"
+msgstr "23 Avril 2013: Nous  avons  des problèmes techniques avec certain paiements de cartes de crédit et certaines réservations sont déjà confirmées. Avant de refaire une réservation, veuillez nous contacter ici:  %s"
 
 #: ../code/application/views/hw/booking_view.php:90
 #: ../code/application/views/hw/booking_view.php:1015
